Optimize and bug fix